several changes on syntax

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         <div class="footer_wrapper">
             <!-- Если не оборачивать каждый блок в обертку - получится криво -->
             <div>
-                <div class="footer_social">
+                <div class="footer_social">w
                     <a href="#" class="footer_social_item">
                         <i class="fab fa-facebook-f"></i>
                     </a>
